# apps/errant-tower-server/Domains/Progress/ProgressDefinitions.cs
@@ -1,10 +1,16 @@
-﻿using ErrantTowerServer.Domains.Floor;
+using ErrantTowerServer.Domains.Floor;
 
 namespace ErrantTowerServer.Domains.Progress;
+
+public record DomainFloors
+{
+    public required bool IsUnlocked { get; init; }
+    public required FloorDomain Domain { get; init; }
+    public required FloorTeaser[] Floors { get; init; }
+}
 
 public record FloorTeaser
 {
     public bool IsUnlocked { get; init; }
-    public required FloorGuid FloorGuid { get; init; }
-    public required FloorDomain FloorDomain { get; init; }
+    public required FloorGuid Guid { get; init; }
 }
